--- a/templates/components/_sidebar.html.twig
+++ b/templates/components/_sidebar.html.twig
@@ -30,7 +30,7 @@
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-user-plus"></i>Adherent</a></li>
+                    <li><a href="{{ path('adherent_add') }}"><i class="fa fa-user-plus"></i>Adherent</a></li>
                 </ul>
             </li>
         </ul>
