--- a/templates/form/adherent.html.twig
+++ b/templates/form/adherent.html.twig
@@ -63,6 +63,12 @@
 
     <div class="row">
         <div class="col-xs-6">
+            {{ form_row(form.situation) }}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6">
             {{ form_row(form.commentaire) }}
         </div>
         <div class="col-xs-6">
