--- a/templates/form/adherent.html.twig
+++ b/templates/form/adherent.html.twig
@@ -1,4 +1,5 @@
 {% block form %}
+    {{ form_start(form) }}
     <div class="row">
         <div class="col-xs-6">
             {{ form_row(form.nom) }}
@@ -19,7 +20,7 @@
 
     <div class="row">
         <div class="col-xs-6">
-            {{ form_start(form) }}
+            {#{{ form_start(form) }}#}
         </div>
         <div class="col-xs-6">
             {{ form_row(form.telephone) }}
@@ -62,7 +63,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-5">
             {{ form_row(form.situation) }}
         </div>
     </div>
