--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -31,23 +31,23 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="{{ asset('dist/img/user2-160x160.jpg') }}" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Bara SECK</span>
+                        <span class="hidden-xs"> {{ app.user.nom ~ ' ' ~  app.user.prenom}}</span>
                     </a>
                     <ul class="dropdown-menu">
                         <li class="user-header">
                             <img src="{{ asset('dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
 
                             <p>
-                                Bara SECK
+                                {{ app.user.nom ~ ' ' ~  app.user.prenom}}
                             </p>
                         </li>
 
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                <a href="{{ path('index_home') }}" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Déconnexion</a>
+                                <a href="{{ path('security_logout') }}" class="btn btn-default btn-flat">Déconnexion</a>
                             </div>
                         </li>
                     </ul>
