--- a/templates/components/_sidebar.html.twig
+++ b/templates/components/_sidebar.html.twig
@@ -5,7 +5,7 @@
                 <img src="{{ asset('dist/img/user2-160x160.jpg')}}" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Bara SECK</p>
+                <p> {{ app.user.nom ~ ' ' ~  app.user.prenom}}</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> En ligne</a>
             </div>
         </div>
